h3. v.0.4.1

Handle empty array on geo setter.

h3. v.0.4

Updated to work with Mongoid 2.0.1 (niedhui)

h3. v 0.3.2

Remove bson_ext dependency

h3. v 0.3

Pulled fixes and refactorings from itzit