@@ -1,3 +1,4 @@
 require 'mongoid/geo'
 
 Mongoid::Geo.mongo_db_version = 1.5
+Mongoid::Geo.spherical = false
