@@ -18,5 +18,5 @@ Gem::Specification.new do |s|
   s.add_dependency              'activesupport',  '>= 3.0.4'
   s.add_dependency              'hashie',         '>= 0.4.0'   # https://github.com/okiess/mongo-hashie ???
 
-  s.version                     = "0.4.1"
+  s.version                     = "0.4.2"
 end
