@@ -1,3 +1,7 @@
+h3. v.0.4.2
+
+Support for spherical data save mode for lat/lng array using Mongoid::Geo.spherical
+
 h3. v.0.4.1
 
 Handle empty array on geo setter.
